files/style.css
body {
    height: 100%;
    margin: 0;
    overflow: hidden;
    background: linear-gradient(to bottom, #202020, #111119);
    color: white;
    overflow: hidden;
    font-family: 'F3';
}

@font-face {
    font-family: F3;
    src: url("DankMono-Regular.ttf") format('truetype');
    font-weight: bold;
    font-style: normal;
}

a:link { color: white; text-decoration: none;}

a:visited { color: white; text-decoration: none;}

.letter:link {
    color: white;
  }
  
  .letter:hover {
    color: rgb(201, 201, 201);
    transition: .5s;
  }
  
  .letter:active {
    color: white;
  }

html {  height: 100%;}

.warn {
    text-decoration: underline;
}

.topregion {
    background-color: rgb(112, 127, 255);
    position: absolute;
    transform: translate(-50%, -0%);
    top: 0%;
    left: 50%;
    z-index: 1;

    height: 23px;
    width: 100%;

    text-align: center;
}

.topregion2 {
    background-color: rgba(0, 0, 0, 0.253);
    border-right: 2px solid white;
    position: absolute;
    transform: translate(-0%, -0%);
    top: 0%;
    left: 0%;
    line-height: 40px;

    height: 100%;
    width: 7%;

    text-align: center;
}

.box1 {
    margin: 0 auto;

    
    height: 40px;
    width: 100px;
    background-color: rgba(0, 0, 0, 0);
    transition: .5s;
}

.box1:hover {
    background-color: rgba(255, 255, 255, 0.253);
    transition: .5s;
    cursor: pointer;
}

.box2 {
    margin: 0 auto;

    
    height: 40px;
    width: 100px;
    background-color: rgba(0, 0, 0, 0);
    transition: .5s;
}

.box2:hover {
    background-color: rgba(255, 255, 255, 0.253);
    transition: .5s;
    cursor: pointer;
}

.box3 {
    margin: 0 auto;

    
    height: 40px;
    width: 100px;
    background-color: rgba(0, 0, 0, 0);
    transition: .5s;
}

.box3:hover {
    background-color: rgba(255, 255, 255, 0.253);
    transition: .5s;
    cursor: pointer;
}

.note {
    filter: blur(3px);
    transition: .3s all;
}

.note:hover {
    filter: blur(0px);
    transition: .3s all;
}

#close {
    background-color: transparent;
    border: none;
    color: rgb(221, 221, 221);
    font-size: 30px;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;

    transform: translate(-50%, -50%);
    top: 35%;
    left: 99%;
    position: absolute;
    transition: .3s all;
}

#close:hover {
    cursor: pointer;
    color: white;
    transition: .3s all;
}

#myVideo {
    position: fixed;
    right: 0;
    bottom: 0;
    min-width: 100%;
    min-height: 100%;

    filter: blur(20px);

    z-index: -1;
  }
  

  .content {
    position: fixed;
    bottom: 0;
    background: rgba(0, 0, 0, 0.5);
    color: #f1f1f1;
    width: 100%;
    padding: 20px;
  }


  #middleregion {
      border: 0px solid white;
      background-color: rgba(0, 0, 0, 0.466);

      transform: translate(-50%, -50%);
      top: 50%;
      left: 50%;
      position: absolute;
      width: 170px;
      height: 155px;
      text-align: center;
  }

@font-face {
    font-family: F1;
    src: url("Positive\ System.otf") format('truetype');
    font-weight: bold;
    font-style: normal;
}

@font-face {
    font-family: F2;
    src: url("ka1.ttf") format('truetype');
    font-weight: bold;
    font-style: normal;
}

  .letter {
      font-size: 90px;
      font-family: F2;
      line-height: 120px;
      transition: .5s;
  }

  marquee {
      width: 140px;
      border-left: 1px solid white;
      border-right: 1px solid white;
      font-size: 15px;
  }

  marquee:hover {
      cursor: default;
  }

.emily {
    color: white;
    transition: .5s;
}

.emily:hover {
    color: rgb(166, 255, 0);
    text-shadow: 1px 1px 1px rgb(255, 255, 255);
    transition: .5s;
}

